[project]
name = "c14-ping"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Freitas",email = "phfreitas@ges.inatel.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "c14_ping", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
